--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,8 +3,8 @@ version: "3.3"
 services:
   h2:
     build:
-      context: ./h2
-      dockerfile: h2/Dockerfile
+      context: ./database
+      dockerfile: Dockerfile
     hostname: 'h2'
     ports:
       - "8181:8181"
@@ -14,8 +14,8 @@ services:
 
   backend:
     build:
-      context: ../backend
-      dockerfile: backend/Dockerfile
+      context: ./backend
+      dockerfile: Dockerfile
     ports:
       - "8080"
     environment:
