--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -9,8 +9,8 @@ services:
     ports:
       - "8181:8181"
       - "1521:1521"
-    volumes:
-      - ./.h2-data:/opt/h2-data
+#    volumes:
+#      - ./.h2-data:/opt/h2-data
 
   backend:
     build:
@@ -24,6 +24,6 @@ services:
       - DATASOURCE_USERNAME=sa
       - DATASOURCE_PASSWORD=sa
       - SPRING_PROFILES_ACTIVE=dev
-
-volumes:
-    h2-data:
+#
+#volumes:
+#    h2-data:
